# instruct-nerf2nerf

./: .gitignore  LICENSE  README.md  get_clip.py  pyproject.toml  update_imgs.py
in2n/: in2n.py  in2n_config.py  in2n_datamanager.py  in2n_pipeline.py  in2n_trainer.py  ip2p.py  trainer.py
in2n/data/: in2n_datamanager.py
